--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,105 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="../node_modules/electron-tabs/electron-tabs.css">
-    <div class="etabs-tabgroup">
-        <div class="etabs-tabs"></div>
-        <div class="etabs-buttons"></div>
+
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        body {
+            font-family: Arial;
+        }
+
+        /* Style the tab */
+
+        .tab {
+            overflow: hidden;
+            border: 1px solid #ccc;
+            background-color: #f1f1f1;
+        }
+
+        /* Style the buttons inside the tab */
+
+        .tab button {
+            background-color: inherit;
+            float: left;
+            border: none;
+            outline: none;
+            cursor: pointer;
+            padding: 14px 16px;
+            transition: 0.3s;
+            font-size: 17px;
+        }
+
+        /* Change background color of buttons on hover */
+
+        .tab button:hover {
+            background-color: #ddd;
+        }
+
+        /* Create an active/current tablink class */
+
+        .tab button.active {
+            background-color: #ccc;
+        }
+
+        /* Style the tab content */
+
+        .tabcontent {
+            display: none;
+            padding: 6px 12px;
+            border: 1px solid #ccc;
+            border-top: none;
+        }
+
+        table {
+            font-family: arial, sans-serif;
+            border-collapse: collapse;
+            width: 100%;
+        }
+
+        td,
+        th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+        }
+
+        tr:nth-child(even) {
+            background-color: #dddddd;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="tab">
+        <button class="tablinks" id="btnAutorun">Autorun</button>
+        <button class="tablinks" id="btnManual">Manual</button>
+        <button class="tablinks" id="btnLog">Log</button>
     </div>
-    <div class="etabs-views"></div>    
-    <script>
-      require('./index.js')
-    </script>
+
+    <div id="autorun" class="tabcontent">
+        <h3>Autorun</h3>
+        <p>Run equipment</p>
+    </div>
+
+    <div id="manual" class="tabcontent">
+        <h3>Manual</h3>
+        <p>Manually operate equipement</p>
+    </div>
+
+    <div id="log" class="tabcontent">
+        <table id="logTable">
+            <col width="30%">
+            <col width="10%">
+            <col width="60%">
+            <tr>
+                <th>Time</th>
+                <th>Category</th>
+                <th>Message</th>
+            </tr>
+        </table>
+    </div>
+
+    <script>require('./index.js')</script>
+</body>
+
 </html>
