--- a/src/index.html
+++ b/src/index.html
@@ -79,6 +79,8 @@
     <div id="autorun" class="tabcontent">
         <h3>Autorun</h3>
         <p>Run equipment</p>
+        <button id="btnRun">Run</button>
+        <button id="btnStop">Stop</button>
     </div>
 
     <div id="manual" class="tabcontent">
