--- a/src/index.html
+++ b/src/index.html
@@ -3,70 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-        body {
-            font-family: Arial;
-        }
-
-        /* Style the tab */
-
-        .tab {
-            overflow: hidden;
-            border: 1px solid #ccc;
-            background-color: #f1f1f1;
-        }
-
-        /* Style the buttons inside the tab */
-
-        .tab button {
-            background-color: inherit;
-            float: left;
-            border: none;
-            outline: none;
-            cursor: pointer;
-            padding: 14px 16px;
-            transition: 0.3s;
-            font-size: 17px;
-        }
-
-        /* Change background color of buttons on hover */
-
-        .tab button:hover {
-            background-color: #ddd;
-        }
-
-        /* Create an active/current tablink class */
-
-        .tab button.active {
-            background-color: #ccc;
-        }
-
-        /* Style the tab content */
-
-        .tabcontent {
-            display: none;
-            padding: 6px 12px;
-            border: 1px solid #ccc;
-            border-top: none;
-        }
-
-        table {
-            font-family: arial, sans-serif;
-            border-collapse: collapse;
-            width: 100%;
-        }
-
-        td,
-        th {
-            border: 1px solid #dddddd;
-            text-align: left;
-            padding: 8px;
-        }
-
-        tr:nth-child(even) {
-            background-color: #dddddd;
-        }
-    </style>
+    <link href="css/styles.css" type="text/css" rel="stylesheet"/>
 </head>
 
 <body>
@@ -89,16 +26,16 @@
     </div>
 
     <div id="log" class="tabcontent">
-        <table id="logTable">
-            <col width="30%">
-            <col width="10%">
-            <col width="60%">
-            <tr>
-                <th>Time</th>
-                <th>Category</th>
-                <th>Message</th>
-            </tr>
-        </table>
+            <table id="logTable">
+                    <col width="30%">
+                    <col width="10%">
+                    <col width="60%">
+                    <tr>
+                        <th>Time</th>
+                        <th>Category</th>
+                        <th>Message</th>
+                    </tr>
+                </table>
     </div>
 
     <script>require('./index.js')</script>
