--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
                 <col width="30%">
                 <col width="70%">
                 <tr>
-                    <td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td>              
+                    <td><label class="switch"><input type="checkbox" checked/><span class="slider"></span></label></td>              
                     <td>door opened</td>
                 </tr>
                 <tr>
