--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="css/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="css/styles.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
@@ -14,71 +14,130 @@
     </div>
 
     <div id="autorun" class="tabcontent">
-        <h3>Autorun</h3>
-        <p>Run equipment</p>
-        <button id="btnRun">Run</button>
-        <button id="btnStop">Stop</button>
+        <div class="flex-container">
+            <aside class="aside aside1">
+                <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" width="500" height="500" viewBox="0 0 500 500" style="background-color: black;">
+                    <rect x="100" y="200" width="300" height="100" style="stroke:white;" />
+                </svg>
+            </aside>
+            <article class="main">
+                <h3>Autorun</h3>
+                <p>Run equipment</p>
+                <button id="btnRun">Run</button>
+                <button id="btnStop">Stop</button>
+            </article>
+        </div>
     </div>
 
     <div id="manual" class="tabcontent">
         <div class="flex-container">
-        <header class="header">IO</header>
-        <aside class="aside aside1">
-            <h3>Input</h3>
-            <table id="ioIn">
-                <col width="30%">
-                <col width="70%">
-                <tr>
-                    <td><label class="switch"><input type="checkbox" checked/><span class="slider"></span></label></td>              
-                    <td>door opened</td>
-                </tr>
-                <tr>
-                    <td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td>              
-                    <td>clamp left closed</td>
-                </tr>
-                <tr>
-                    <td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td>              
-                    <td>clamp left opended</td>
-                </tr>
-                <tr>
-                    <td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td>              
-                    <td>clamp right closed</td>
-                </tr>
-                <tr>
-                    <td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td>              
-                    <td>clamp right opended</td>
-                </tr>
-            </table>
-        </aside>
-        <article class="main">
-            <h3>Output</h3>
-            <table id="ioOut">
-                <col width="30%">
-                <col width="70%">
-                <tr>
-                    <td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td>              
-                    <td>tower red</td>
-                </tr>
-                <tr>
-                    <td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td>              
-                    <td>tower green</td>
-                </tr>
-                <tr>
-                    <td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td>              
-                    <td>buzzer</td>
-                </tr>
-                <tr>
-                    <td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td>              
-                    <td>clamp left</td>
-                </tr>
-                <tr>
-                    <td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td>              
-                    <td>clamp right</td>
-                </tr>
-            </table>
-        </article>
-        <footer class="footer"></footer>
-    </div>
+            <header class="header">IO</header>
+            <aside class="aside aside1">
+                <h3>Input</h3>
+                <table id="ioIn">
+                    <col width="30%">
+                    <col width="70%">
+                    <tr>
+                        <td>
+                            <label class="switch">
+                                <input type="checkbox" checked/>
+                                <span class="slider"></span>
+                            </label>
+                        </td>
+                        <td>door opened</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label class="switch">
+                                <input type="checkbox" />
+                                <span class="slider"></span>
+                            </label>
+                        </td>
+                        <td>clamp left closed</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label class="switch">
+                                <input type="checkbox" />
+                                <span class="slider"></span>
+                            </label>
+                        </td>
+                        <td>clamp left opended</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label class="switch">
+                                <input type="checkbox" />
+                                <span class="slider"></span>
+                            </label>
+                        </td>
+                        <td>clamp right closed</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label class="switch">
+                                <input type="checkbox" />
+                                <span class="slider"></span>
+                            </label>
+                        </td>
+                        <td>clamp right opended</td>
+                    </tr>
+                </table>
+            </aside>
+            <article class="main">
+                <h3>Output</h3>
+                <table id="ioOut">
+                    <col width="30%">
+                    <col width="70%">
+                    <tr>
+                        <td>
+                            <label class="switch">
+                                <input type="checkbox" />
+                                <span class="slider"></span>
+                            </label>
+                        </td>
+                        <td>tower red</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label class="switch">
+                                <input type="checkbox" />
+                                <span class="slider"></span>
+                            </label>
+                        </td>
+                        <td>tower green</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label class="switch">
+                                <input type="checkbox" />
+                                <span class="slider"></span>
+                            </label>
+                        </td>
+                        <td>buzzer</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label class="switch">
+                                <input type="checkbox" />
+                                <span class="slider"></span>
+                            </label>
+                        </td>
+                        <td>clamp left</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label class="switch">
+                                <input type="checkbox" />
+                                <span class="slider"></span>
+                            </label>
+                        </td>
+                        <td>clamp right</td>
+                    </tr>
+                </table>
+            </article>
+            <footer class="footer"></footer>
+        </div>
     </div>
 
     <div id="log" class="tabcontent">
