--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,14 @@
     <div id="autorun" class="tabcontent">
         <div class="flex-container">
             <aside class="aside aside1">
-                <svg version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" width="500" height="500" viewBox="0 0 500 500" style="background-color: black;">
+                <svg id="overview" version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" width="500" height="500" viewBox="0 0 500 500"
+                    style="background-color: black;">
+                    <g id="overview_stage" transform="translate(100 50) rotate(0 0 0)">
+                        <rect x="0" y="0" height="200" width="200" style="stroke: #f6fa01;" />
+                        <text x="80" y="80" style="stroke: #f5f5f5;">
+                            Stage
+                        </text>
+                    </g>
                     <rect x="100" y="200" width="300" height="100" style="stroke:white;" />
                 </svg>
             </aside>
