Update IO using CSF SampleStage

--- a/src/index.html
+++ b/src/index.html
@@ -44,51 +44,25 @@
                 <table id="ioIn">
                     <col width="30%">
                     <col width="70%">
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input type="checkbox" checked/>
-                                <span class="slider"></span>
-                            </label>
-                        </td>
-                        <td>door opened</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input type="checkbox" />
-                                <span class="slider"></span>
-                            </label>
-                        </td>
-                        <td>clamp left closed</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input type="checkbox" />
-                                <span class="slider"></span>
-                            </label>
-                        </td>
-                        <td>clamp left opended</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input type="checkbox" />
-                                <span class="slider"></span>
-                            </label>
-                        </td>
-                        <td>clamp right closed</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input type="checkbox" />
-                                <span class="slider"></span>
-                            </label>
-                        </td>
-                        <td>clamp right opended</td>
-                    </tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>IN_SENSOR_LOADER</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>IN_SENSOR_UNLOADER</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>IN_SENSOR_STAGE</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>IN_SENSOR_UP</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>IN_LEFT_TOP_CLMAPED</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>IN_LEFT_TOP_RELEASED</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>IN_LEFT_BOTTOM_CLAMPED</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>IN_LEFT_BOTTOM_RELEASED</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>N/A</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>IN_RIGHT_TOP_CLAMPED</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>IN_RIGHT_TOP_RELEASED</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>IN_RIGHT_BOTTOM_CLAMPED</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>IN_RIGHT_BOTTOM_RELEASED</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>N/A</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>N/A</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>N/A</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>IN_GLASS_STGAE</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>IN_GLASS_IN_BUFFER</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>IN_GLASS_OUT_BUFFER</td></tr>
                 </table>
             </aside>
             <article class="main">
@@ -96,51 +70,22 @@
                 <table id="ioOut">
                     <col width="30%">
                     <col width="70%">
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input type="checkbox" />
-                                <span class="slider"></span>
-                            </label>
-                        </td>
-                        <td>tower red</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input type="checkbox" />
-                                <span class="slider"></span>
-                            </label>
-                        </td>
-                        <td>tower green</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input type="checkbox" />
-                                <span class="slider"></span>
-                            </label>
-                        </td>
-                        <td>buzzer</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input type="checkbox" />
-                                <span class="slider"></span>
-                            </label>
-                        </td>
-                        <td>clamp left</td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label class="switch">
-                                <input type="checkbox" />
-                                <span class="slider"></span>
-                            </label>
-                        </td>
-                        <td>clamp right</td>
-                    </tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>OUT_CLAMP_LOADER</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>OUT_CLAMP_UNLOADER</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>OUT_CLAMP_STAGE</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>OUT_CLAMP_UP</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>OUT_LEFT_TOP_CLAMP</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>OUT_LEFT_BOTTOM_CLAMP</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>N/A</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>OUT_RIGHT_TOP_CLAMP</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>OUT_RIGHT_BOTTOM_CLAMP</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>N/A</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>N/A</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>N/A</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>N/A</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>N/A</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>N/A</td></tr>
+                    <tr><td><label class="switch"><input type="checkbox"/><span class="slider"></span></label></td><td>N/A</td></tr>
                 </table>
             </article>
             <footer class="footer"></footer>
