movable tab head

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
         <button class="tablinks" id="btnAutorun">Autorun</button>
         <button class="tablinks" id="btnManual">Manual</button>
         <button class="tablinks" id="btnLog">Log</button>
+        <label class="tab remaining">## Equipment-Boilerplate ##</button>
     </div>
 
     <div id="autorun" class="tabcontent">
@@ -35,7 +36,7 @@
             </article>
         </div>
     </div>
-
+    
     <div id="manual" class="tabcontent">
         <div class="flex-container">
             <header class="header">IO</header>
