cameraImage using canvas

--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,11 @@
                 <p>Run equipment</p>
                 <button id="btnRun">Run</button>
                 <button id="btnStop">Stop</button>
+                
+                <canvas id="cameraImage" 
+                        width="160" height="120"
+                        style="border: 1px solid #cccccc;"
+                />
             </article>
         </div>
     </div>
