--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,9 @@
     <div id="autorun" class="tabcontent">
         <div class="flex-container">
             <aside class="aside aside1">
-                <svg id="overview" version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" width="500" height="500" viewBox="-1000 -1000 2000 2000"
+                <svg id="overview" version="1.1" baseProfile="full" xmlns="http://www.w3.org/2000/svg" 
+                    width="500" height="500" 
+                    viewBox="-1000 -1000 2000 2000"
                     style="background-color: black;">
 
                     <defs>
@@ -31,7 +33,8 @@
                         </g>
                     </defs>
 
-                    <g id="overview_stage" transform="translate(0 0) rotate(0 0 0)">
+                    <g id="overview_stage" 
+                        transform="translate(0 0) rotate(0 0 0)">
                         <use xlink:href="#y_axis_stage" x="-600" y="-1000" />
                         <use xlink:href="#y_axis_stage" x="600" y="-1000" />
                         <rect x="-500" y="-900" width="1150" height="800" style="stroke:green; fill: none; stroke-width: 3px;"/>
@@ -40,7 +43,8 @@
 
                     <rect x="-800" y="400" width="1600" height="100" style="stroke:red; fill: none; stroke-width: 3px;" />
                     
-                    <g id="overview_shift" transform="translate(0 0) rotate(0 0 0)">
+                    <g id="overview_shift" 
+                        transform="translate(0 0) rotate(0 0 0)">
                         <use xlink:href="#x_shift_camera" x="-650" y="250" />
                     </g>
                 </svg>
